--- a/style.css
+++ b/style.css
@@ -1,44 +1,45 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-:root{
-    --bg:#23d412;
-    --ss:1%;
-    --sm:1em;
+:root {
+  --bg: #23d412;
+  --ss: 1%;
+  --sm: 1em;
 }
-body{
-    background-color: var(--bg);
+body {
+  background-color: var(--bg);
 }
-#body{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+#body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
-button{
-width: 96vw;
-margin: var(--ss);
-padding: var(--ss);
-border-radius: 56px;
-border:2px var(--bg) dashed;
-background: #23d412;
-box-shadow:  27px 27px 54px #126c09,
-             -27px -27px 54px #34ff1b;
+button {
+  width: 96vw;
+  margin: var(--ss);
+  padding: var(--ss);
+  border-radius: 56px;
+  border: 2px var(--bg) dashed;
+  background: #23d412;
+  box-shadow: 27px 27px 54px #126c09, -27px -27px 54px #34ff1b;
 }
-button:hover{
-color: orangered;
-border:2px orangered dashed;
+button:hover {
+  color: orangered;
+  border: 2px orangered dashed;
 }
-h1{
-margin-top: var(--sm);
+h1 {
+  margin-top: var(--sm);
 }
-img{
-bottom: 0;
-width: 100vw;
-height: 80vh;
-margin: var(--ss);
-margin-bottom: 0;
-padding: var(--ss);
-padding-bottom: 0;
+img {
+  bottom: 0;
+  width: 100vw;
+  height: 80vh;
+  margin: var(--ss);
+  margin-bottom: 0;
+  margin-left: 0;
+  padding: var(--ss);
+  padding-bottom: 0;
+  padding-left: 0;
 }
